# json-transform

./: LICENSE  README.md  json-transform.cabal
app/: Main.hs
src/Data/: JSONTransform.hs
test/: Spec.hs
test-cases/accessor/: multiple-accessor.json  multiple-fields.json  single-accessor.json  text-concatenation.json
test-cases/array/: access-root.json  access-variable.json  array-accessor.json  map-array.json
test-cases/constant/: escaped-characters.json  nested.json  null.json  single-field.json
test-cases/examples/: bear.json
test-cases/invalid-transform/: duplicate-key.json  key-must-be-at-end.json  missing-bracket.json  nested-key.json  non-alpha-variable.json  unescaped-dollar.json
