name:                json-transform
version:             0.2.0
synopsis:            Transforms one json value to another
description:         Transforms one json value to another
homepage:            https://github.com/iansullivan88/json-transform
license:             MIT
license-file:        LICENSE
author:              Ian Sullivan
maintainer:          Ian Sullivan
copyright:           2017 Ian Sullivan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.JSONTransform 
  ghc-options:         -Wall -W
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , aeson
                     , text
                     , unordered-containers
                     , vector
                     , scientific
  default-language:    Haskell2010

executable json-transform
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -W
  build-depends:       base
                     , json-transform
                     , optparse-applicative
                     , bytestring
                     , text
                     , aeson
  default-language:    Haskell2010

test-suite json-transform-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , json-transform
                     , HUnit
                     , aeson
                     , directory
                     , filepath
                     , bytestring
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -W
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iansullivan88/json-transform
